--- a/CatRent/Wpf.CatRent/AddCatWindow.xaml
+++ b/CatRent/Wpf.CatRent/AddCatWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Wpf.CatRent.AddCat"
+﻿<Window x:Class="Wpf.CatRent.AddCatWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf.CatRent"
         mc:Ignorable="d"
-        Title="Додати нового кота" Height="416" Width="450" Loaded="Window_Loaded">
+        Title="Додати нового кота" Height="434" Width="450" Loaded="Window_Loaded">
     <DockPanel Margin="10">
         <StackPanel>
             <WrapPanel Margin="5">
@@ -15,6 +15,21 @@
                        Height="30" 
                        Width="152"/>
                 <TextBox x:Name="tbName" 
+                         HorizontalAlignment="Left" 
+                         Height="30" 
+                         TextWrapping="Wrap" 
+                         VerticalAlignment="Top" 
+                         Width="238"/>
+
+            </WrapPanel>
+
+            <WrapPanel Margin="5">
+                <Label Content="Ціна:" 
+                       HorizontalAlignment="Left" 
+                       VerticalAlignment="Center" 
+                       Height="30" 
+                       Width="152"/>
+                <TextBox x:Name="tbPrice" 
                          HorizontalAlignment="Left" 
                          Height="30" 
                          TextWrapping="Wrap" 
@@ -54,15 +69,17 @@
                        Width="152"/>
                 <WrapPanel Width="238">
                     <RadioButton Content="котик" 
+                                 Tag="true"
                                  Margin="40,10" 
                                  HorizontalAlignment="Left" 
                                  VerticalAlignment="Center"
                                  Checked="RadioButton_Checked"/>
                     <RadioButton Content="киця" 
                                  Margin="10" 
+                                 Tag="false"
                                  HorizontalAlignment="Right" 
                                  VerticalAlignment="Center" 
-                                 Checked="RadioButton_Checked_1"/>
+                                 Checked="RadioButton_Checked"/>
                 </WrapPanel>
             </WrapPanel>
             <WrapPanel>
@@ -74,13 +91,13 @@
                 <Button Width="238"
                         Margin="2"
                         Content="Вибрати" 
-                        Click="Button_Click">
+                        Click="btnSelectImage_Click">
                 </Button>
             </WrapPanel>
             <Button Height="50" 
                     Margin="10,20"
                     Content="Зберегти кота" 
-                    Click="Button_Click_1"/>
+                    Click="SaveCat_Click"/>
         </StackPanel>
     </DockPanel>
 </Window>
