--- a/CatRent/Wpf.CatRent/MainWindow.xaml
+++ b/CatRent/Wpf.CatRent/MainWindow.xaml
@@ -5,13 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf.CatRent"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="MainWindow" 
+        Height="450" 
+        Width="800" 
+        Loaded="Window_Loaded">
     <Window.Resources>
         <Style x:Key="MyStyle">
             <Setter Property="ItemsControl.FontFamily" Value="Arial"/>
             <Setter Property="ItemsControl.Background" Value="LightGray"/>
-            <Setter Property="ItemsControl.Foreground" Value="Red"/>
-            <Setter Property="ItemsControl.Height" Value="50"/>
+            <Setter Property="ItemsControl.Foreground" Value="Black"/>
+            <Setter Property="ItemsControl.Height" Value="30"/>
             <Setter Property="ItemsControl.Margin" Value="0,5"/>
         </Style>
     </Window.Resources>
@@ -34,6 +37,32 @@
                     Background="GreenYellow"
                     Click="btnUpdate_Click"
                     Style="{StaticResource MyStyle}"/>
+            
+            <Label Content="Скільки додати котів?" HorizontalAlignment="Center"/>
+            <TextBox x:Name="tbHowCats" Width="80"/>
+            <Button Name="btnAddRange" 
+                    Content="Додати одним махом" 
+                    Click="btnAddRange_Click"
+                    Style="{StaticResource MyStyle}"/>
+
+            <Grid>
+                <ProgressBar Minimum="0" Maximum="100" Name="pbStatus" Height="20" Margin="0,5,0,0"/>
+                <TextBlock Text="{Binding ElementName=pbStatus, Path=Value, StringFormat={}{0:0}%}" 
+                           HorizontalAlignment="Center" 
+                           VerticalAlignment="Center" />
+                <TextBlock Name="tbStatus"
+                   HorizontalAlignment="Center" 
+                   Margin="10,40,0,0" 
+                   VerticalAlignment="Top"
+                   RenderTransformOrigin="1,0.649"
+                   />
+            </Grid>
+            <Button Name="btnCancel" 
+                    Content="Скасувати" 
+                    Click="btnCancel_Click"
+                    Style="{StaticResource MyStyle}"
+                    Margin="0,5,0,0"
+                    Background="DarkOrange"/>
         </StackPanel>
         
         <DataGrid x:Name="dgSimple" 
